{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 15,
  "lineage": "3444bd43-3bc2-14c0-d114-eb26b8beb01a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "desafio_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:829703038518:instance/i-00d87a2b069d95f98",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00d87a2b069d95f98",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "desafio-uol-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08f22308131b0eb5f"
              }
            ],
            "primary_network_interface_id": "eni-08f22308131b0eb5f",
            "private_dns": "ip-10-0-1-47.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.47",
            "public_ip": "13.218.92.194",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08872f9e9c2b9c0e8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036b4a50238644113",
            "tags": {
              "Name": "desafio-web-server"
            },
            "tags_all": {
              "Name": "desafio-web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0967c8ee6972b971b"
            ]
          },
          "dependencies": [
            "aws_security_group.desafio_sg",
            "aws_subnet.desafio_subnet",
            "aws_vpc.desafio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "desafio_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:829703038518:internet-gateway/igw-0d278a46f9caea838",
            "id": "igw-0d278a46f9caea838",
            "owner_id": "829703038518",
            "region": "us-east-1",
            "tags": {
              "Name": "desafio-igw"
            },
            "tags_all": {
              "Name": "desafio-igw"
            },
            "vpc_id": "vpc-05f436350e9a578c4"
          },
          "dependencies": [
            "aws_vpc.desafio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "desafio_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:829703038518:route-table/rtb-022cb73b42714bfb8",
            "id": "rtb-022cb73b42714bfb8",
            "owner_id": "829703038518",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d278a46f9caea838",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "desafio-rt"
            },
            "tags_all": {
              "Name": "desafio-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f436350e9a578c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.desafio_igw",
            "aws_vpc.desafio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0620636419c0cec57",
            "region": "us-east-1",
            "route_table_id": "rtb-022cb73b42714bfb8",
            "subnet_id": "subnet-036b4a50238644113"
          },
          "dependencies": [
            "aws_internet_gateway.desafio_igw",
            "aws_route_table.desafio_rt",
            "aws_subnet.desafio_subnet",
            "aws_vpc.desafio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "desafio_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:829703038518:security-group/sg-0967c8ee6972b971b",
            "description": "Controla o acesso a instancia EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0967c8ee6972b971b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "177.9.248.107/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "desafio-web-sg",
            "name_prefix": "",
            "owner_id": "829703038518",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "desafio-sg"
            },
            "tags_all": {
              "Name": "desafio-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f436350e9a578c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.desafio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "desafio_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:829703038518:subnet/subnet-036b4a50238644113",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036b4a50238644113",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "829703038518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "desafio-subnet"
            },
            "tags_all": {
              "Name": "desafio-subnet"
            },
            "vpc_id": "vpc-05f436350e9a578c4"
          },
          "dependencies": [
            "aws_vpc.desafio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "desafio_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:829703038518:vpc/vpc-05f436350e9a578c4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-039bb65082cae7a50",
            "default_route_table_id": "rtb-0d8fca5b362a0f299",
            "default_security_group_id": "sg-0a56c05ca2e15a113",
            "dhcp_options_id": "dopt-0a28bf6132497f85d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05f436350e9a578c4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d8fca5b362a0f299",
            "owner_id": "829703038518",
            "region": "us-east-1",
            "tags": {
              "Name": "desafio-vpc"
            },
            "tags_all": {
              "Name": "desafio-vpc"
            }
          }
        }
      ]
    }
  ]
}